feat: update java and tomcat and gradle