@@ -30,7 +30,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     // if this changes, remember to also change in the ee folder's build.gradle
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.13.1'
 
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml
     implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.18.2'
@@ -108,12 +108,15 @@ jar {
 
 
 tasks.register('copyJars', Copy) {
-    into "$buildDir/dependencies"
     from configurations.runtimeClasspath
+    into layout.buildDirectory.dir("dependencies")
 }
 
 test {
-    jvmArgs '-Djava.security.egd=file:/dev/urandom'
+    jvmArgs = ['-Djava.security.egd=file:/dev/urandom',
+               "--add-opens=java.base/java.lang=ALL-UNNAMED",
+               "--add-opens=java.base/java.util=ALL-UNNAMED",
+               "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"]
     testLogging {
         outputs.upToDateWhen { false }
         showStandardStreams = true
@@ -126,10 +129,10 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent
 tasks.withType(Test).configureEach {
     testLogging {
         // set options for log level LIFECYCLE
-        events TestLogEvent.FAILED,
+        events = [TestLogEvent.FAILED,
                 TestLogEvent.PASSED,
                 TestLogEvent.SKIPPED,
-                TestLogEvent.STANDARD_OUT
+                TestLogEvent.STANDARD_OUT]
         exceptionFormat = TestExceptionFormat.FULL
         showExceptions = true
         showCauses = true
@@ -137,12 +140,12 @@ tasks.withType(Test).configureEach {
 
         // set options for log level DEBUG and INFO
         debug {
-            events TestLogEvent.STARTED,
+            events = [TestLogEvent.STARTED,
                     TestLogEvent.FAILED,
                     TestLogEvent.PASSED,
                     TestLogEvent.SKIPPED,
                     TestLogEvent.STANDARD_ERROR,
-                    TestLogEvent.STANDARD_OUT
+                    TestLogEvent.STANDARD_OUT]
             exceptionFormat = TestExceptionFormat.FULL
         }
         info.events = debug.events
